added darkmode to login

--- a/lecturer-dashboard.html
+++ b/lecturer-dashboard.html
@@ -23,8 +23,8 @@
                     <i class="fas fa-bell"></i>
                 </button>
                 <div class="user-profile">
-                    <img class="user-avatar" id="userAvatar" src="https://ui-avatars.com/api/?name=Prof+Smith" alt="Profile">
-                    <span class="user-name" id="userName">Loading...</span>
+                    <img id="userAvatar" src="https://ui-avatars.com/api/?name={{USER_INITIALS}}" alt="Profile" />
+                    <span id="userName">{{USER_NAME}}</span>
                 </div>
                 <a href="index.html" class="logout-btn">
                     <i class="fas fa-sign-out-alt"></i> Logout
