update on dashboards

--- a/student-dashboard.html
+++ b/student-dashboard.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Dashboard - Central University</title>
+    <link href="auth-check.css" rel="stylesheet">
     <link href="student-dashboard.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="student-dashboard.js" defer></script>
+    <script src="auth-check.js" defer></script>
+    <script src="darkmode.js" defer></script>
+
     <link rel="shortcut icon" href="cu-logo.png" type="image/x-icon">
-    
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -15,15 +20,22 @@
         <div class="nav-container">
             <div class="nav-brand">
                 <img src="cu-logo.png" class="logo-icon" alt="Central University Logo">
-<span class="logo-text">Central University</span>
+                <span class="logo-text">Central University</span>
             </div>
             <div class="nav-items">
+                <!--Darkmode feature-->
+                <button id="theme-switch" class="theme-btn">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px"><path d="M480-120q-150 0-255-105T120-480q0-150 105-255t255-105q14 0 27.5 1t26.5 3q-41 29-65.5 75.5T444-660q0 90 63 153t153 63q55 0 101-24.5t75-65.5q2 13 3 26.5t1 27.5q0 150-105 255T480-120Z"/></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px"><path d="M480-280q-83 0-141.5-58.5T280-480q0-83 58.5-141.5T480-680q83 0 141.5 58.5T680-480q0 83-58.5 141.5T480-280ZM200-440H40v-80h160v80Zm720 0H760v-80h160v80ZM440-760v-160h80v160h-80Zm0 720v-160h80v160h-80ZM256-650l-101-97 57-59 96 100-52 56Zm492 496-97-101 53-55 101 97-57 59Zm-98-550 97-101 59 57-100 96-56-52ZM154-212l101-97 55 53-97 101-59-57Z"/></svg>
+                </button>
+                <!--notification bell and username & profile-->
                 <button class="notification-btn">
                     <i class="fas fa-bell"></i>
+                    <span class="notification-badge"></span>
                 </button>
                 <div class="user-profile">
-                    <img id="userAvatar" src="https://ui-avatars.com/api/?name={{USER_INITIALS}}" alt="Profile" />
-                    <span id="userName">{{USER_NAME}}</span>
+                    <img id="userAvatar" src="https://ui-avatars.com/api/?name=?" alt="Profile" class="user-avatar"/>
+                    <span id="userName">Loading...</span>
                 </div>
                 <a href="index.html" class="logout-btn">
                     <i class="fas fa-sign-out-alt"></i> Logout
