modifying admin page

--- a/student-dashboard.html
+++ b/student-dashboard.html
@@ -12,14 +12,14 @@
     <script src="auth-check.js" defer></script>
     <script src="darkmode.js" defer></script>
 
-    <link rel="shortcut icon" href="cu-logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="pics/cu-logo.png" type="image/x-icon">
 </head>
 <body>
     <!-- Navigation Bar -->
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-brand">
-                <img src="cu-logo.png" class="logo-icon" alt="Central University Logo">
+                <img src="pics/cu-logo.png" class="logo-icon" alt="Central University Logo">
                 <span class="logo-text">Central University</span>
             </div>
             <div class="nav-items">
