--- a/index.html
+++ b/index.html
@@ -6,20 +6,18 @@
   <title>Online Attendance Portal</title>
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <link rel="stylesheet" href="style.css">
-  <link rel="shortcut icon" href="cu-logo.png" type="image/x-icon">
-  <script type="text/javascript" src="password_script.js" defer></script>
-  <script type="text/javascript" src="darkmode.js" defer></script>
+  <link rel="shortcut icon" href="pics/cu-logo.png" type="image/x-icon">
+  <script src="password_script.js" defer></script>
+  <script src="darkmode.js" defer></script>
 </head>
 <body>
 <div class="container">
-  <!-- Dark mode toggle button -->
-  <button id="theme-switch">
-    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"><path d="M480-120q-150 0-255-105T120-480q0-150 105-255t255-105q14 0 27.5 1t26.5 3q-41 29-65.5 75.5T444-660q0 90 63 153t153 63q55 0 101-24.5t75-65.5q2 13 3 26.5t1 27.5q0 150-105 255T480-120Z"/></svg>
-    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"><path d="M480-280q-83 0-141.5-58.5T280-480q0-83 58.5-141.5T480-680q83 0 141.5 58.5T680-480q0 83-58.5 141.5T480-280ZM200-440H40v-80h160v80Zm720 0H760v-80h160v80ZM440-760v-160h80v160h-80Zm0 720v-160h80v160h-80ZM256-650l-101-97 57-59 96 100-52 56Zm492 496-97-101 53-55 101 97-57 59Zm-98-550 97-101 59 57-100 96-56-52ZM154-212l101-97 55 53-97 101-59-57Z"/></svg>
+  <button id="theme-switch" class="theme-btn">
+    <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px"><path d="M480-120q-150 0-255-105T120-480q0-150 105-255t255-105q14 0 27.5 1t26.5 3q-41 29-65.5 75.5T444-660q0 90 63 153t153 63q55 0 101-24.5t75-65.5q2 13 3 26.5t1 27.5q0 150-105 255T480-120Z"/></svg>
+    <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px"><path d="M480-280q-83 0-141.5-58.5T280-480q0-83 58.5-141.5T480-680q83 0 141.5 58.5T680-480q0 83-58.5 141.5T480-280ZM200-440H40v-80h160v80Zm720 0H760v-80h160v80ZM440-760v-160h80v160h-80Zm0 720v-160h80v160h-80ZM256-650l-101-97 57-59 96 100-52 56Zm492 496-97-101 53-55 101 97-57 59Zm-98-550 97-101 59 57-100 96-56-52ZM154-212l101-97 55 53-97 101-59-57Z"/></svg>
   </button>
   
   <div class="login-box">
-    <!-- Left Section -->
     <div class="left-section">
       <h1>LOGIN</h1>
       <p>Fill in with appropriate details to proceed</p>
@@ -27,14 +25,15 @@
       <form id="loginForm">
         <div class="form-group" id="email-group">
           <i class='bx bx-envelope'></i>
-          <input type="email" name="email" placeholder="Email" required oninput="validateInput(this, 'email-group')">
+          <input type="email" name="email" placeholder="Email" required>
           <i class='bx bx-check checkmark'></i>
         </div>
 
         <div class="form-group" id="password-group">
           <i class='bx bx-lock'></i>
-          <input id="password" name="password" type="password" placeholder="Password" required oninput="checkPassword(this)">
-          <i class='bx bx-show password-toggle' onclick="togglePassword()"></i>
+          <input id="password" name="password" type="password" placeholder="Password" required>
+          <i class='bx bx-show password-toggle'></i>
+          <i class='bx bx-check checkmark'></i>
         </div>
 
         <div class="password-rules" id="rules">
@@ -46,7 +45,7 @@
         <button type="submit" class="btn">Login</button>
       </form>
 
-      <div id="loginError" style="color: red; text-align: center; margin-top: 15px; display: none;"></div>
+      <div id="loginError"></div>
 
       <div class="extra-options">
         <a href="forgot-password.html">Forgot Password?</a>
@@ -55,14 +54,13 @@
       </div>
     </div>
 
-    <!-- Right Section -->
     <div class="right-section">
       <div class="welcome-text">
         <h1>Welcome to</h1>
-        <h1>Central University  </h1>
+        <h1>Central University</h1>
         <h1>Online Attendance Portal</h1>
       </div>
-      <img src="123.svg" alt="Student Illustration">
+      <img src="pics/123.svg" alt="Student Illustration">
     </div>
   </div>
 </div>
