--- a/signup.html
+++ b/signup.html
@@ -6,7 +6,7 @@
   <title>Sign Up</title>
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <link rel="stylesheet" href="signup.css" />
-  <link rel="shortcut icon" href="cu-logo.png" type="image/x-icon">
+  <link rel="shortcut icon" href="pics/cu-logo.png" type="image/x-icon">
 
   <script>
     document.addEventListener('DOMContentLoaded', function () {
