--- a/student-dashboard.html
+++ b/student-dashboard.html
@@ -11,7 +11,6 @@
     <script src="student-dashboard.js" defer></script>
     <script src="auth-check.js" defer></script>
     <script src="darkmode.js" defer></script>
-
     <link rel="shortcut icon" href="pics/cu-logo.png" type="image/x-icon">
 </head>
 <body>
@@ -23,12 +22,10 @@
                 <span class="logo-text">Central University</span>
             </div>
             <div class="nav-items">
-                <!--Darkmode feature-->
                 <button id="theme-switch" class="theme-btn">
                     <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px"><path d="M480-120q-150 0-255-105T120-480q0-150 105-255t255-105q14 0 27.5 1t26.5 3q-41 29-65.5 75.5T444-660q0 90 63 153t153 63q55 0 101-24.5t75-65.5q2 13 3 26.5t1 27.5q0 150-105 255T480-120Z"/></svg>
                     <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px"><path d="M480-280q-83 0-141.5-58.5T280-480q0-83 58.5-141.5T480-680q83 0 141.5 58.5T680-480q0 83-58.5 141.5T480-280ZM200-440H40v-80h160v80Zm720 0H760v-80h160v80ZM440-760v-160h80v160h-80Zm0 720v-160h80v160h-80ZM256-650l-101-97 57-59 96 100-52 56Zm492 496-97-101 53-55 101 97-57 59Zm-98-550 97-101 59 57-100 96-56-52ZM154-212l101-97 55 53-97 101-59-57Z"/></svg>
                 </button>
-                <!--notification bell and username & profile-->
                 <button class="notification-btn">
                     <i class="fas fa-bell"></i>
                     <span class="notification-badge"></span>
@@ -44,15 +41,42 @@
         </div>
     </nav>
 
+    <!-- Profile Popup -->
+    <div id="profilePopup" class="profile-popup">
+        <div class="profile-popup-content">
+            <div class="profile-header">
+                <img id="popupUserAvatar" src="" alt="Profile" class="user-avatar"/>
+                <h3 id="popupUserName"></h3>
+            </div>
+            <div class="profile-details">
+                <div class="profile-detail">
+                    <span class="detail-label">Email:</span>
+                    <span id="popupUserEmail" class="detail-value"></span>
+                </div>
+                <div class="profile-detail">
+                    <span class="detail-label">Index Number:</span>
+                    <span id="popupUserIndex" class="detail-value"></span>
+                </div>
+                <div class="profile-detail">
+                    <span class="detail-label">Program:</span>
+                    <span id="popupUserProgram" class="detail-value"></span>
+                </div>
+                <div class="profile-detail">
+                    <span class="detail-label">Level:</span>
+                    <span id="popupUserLevel" class="detail-value"></span>
+                </div>
+            </div>
+            <button class="close-popup-btn">&times;</button>
+        </div>
+    </div>
+
     <!-- Main Content -->
     <main class="main-content">
-        <!-- Welcome Section -->
         <section class="welcome-section">
             <h1 id="welcomeMessage">Welcome back!</h1>
             <p class="welcome-subtext">Track your attendance and stay updated with your courses.</p>
         </section>
 
-        <!-- Attendance Form -->
         <section class="attendance-section">
             <h2>Mark Attendance</h2>
             <div class="attendance-form">
@@ -64,7 +88,6 @@
             <p class="form-note">Enter the attendance code provided by your lecturer.</p>
         </section>
 
-        <!-- Stats Cards -->
         <section class="stats-section">
             <div class="stat-card">
                 <i class="fas fa-chart-pie stat-icon"></i>
@@ -99,7 +122,6 @@
             </div>
         </section>
 
-        <!-- Today's Classes -->
         <section class="classes-section">
             <h2>Today's Classes</h2>
             <ul class="classes-list" id="todayClasses">
@@ -107,7 +129,6 @@
             </ul>
         </section>
 
-        <!-- Attendance History -->
         <section class="history-section">
             <h2>Attendance History</h2>
             <div class="history-table-container">
