--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" href="pics/cu-logo.png" type="image/x-icon">
-  <script src="password_script.js" defer></script>
+  <script src="login.js" defer></script>
   <script src="darkmode.js" defer></script>
 </head>
 <body>
