changes to dashboards and login

--- a/student-dashboard.html
+++ b/student-dashboard.html
@@ -43,6 +43,7 @@
         <div class="mobile-menu">
             <a href="enroll-courses.html" class="mobile-menu-item enroll-link"><i class="fas fa-plus-circle"></i> Enroll Courses</a>
             <a href="registered-courses.html" class="mobile-menu-item registered-link"><i class="fas fa-list-alt"></i> Registered Courses</a>
+            <a href="view-schedule-student.html" class="mobile-menu-item schedule-link"><i class="fas fa-calendar-alt"></i> View Schedule</a>
             <a href="index.html" class="mobile-menu-item logout-link"><i class="fas fa-sign-out-alt"></i> Logout</a>
         </div>
     </nav>
