--- a/view-schedule-lecturer.html
+++ b/view-schedule-lecturer.html
@@ -7,7 +7,7 @@
     <link href="lecturer-dashboard.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <script src="view-schedule.js" defer></script>
+    <script src="view-schedule-lecturer.js" defer></script>
     <script src="darkmode.js" defer></script>
     <link rel="shortcut icon" href="pics/cu-logo.png" type="image/x-icon">
 </head>
@@ -28,6 +28,9 @@
                     <img id="userAvatar" src="https://ui-avatars.com/api/?name=?" alt="Profile" class="user-avatar"/>
                     <span id="userName">Loading...</span>
                 </div>
+                <a href="lecturer-dashboard.html" class="back-btn">
+                    <i class="fas fa-arrow-left"></i> Back to Dashboard
+                </a>
                 <a href="index.html" class="logout-btn">
                     <i class="fas fa-sign-out-alt"></i> Logout
                 </a>
