--- a/registered-courses.html
+++ b/registered-courses.html
@@ -41,6 +41,7 @@
             <a href="student-dashboard.html" class="mobile-menu-item"><i class="fas fa-home"></i> Dashboard</a>
             <a href="enroll-courses.html" class="mobile-menu-item enroll-link"><i class="fas fa-plus-circle"></i> Enroll Courses</a>
             <a class="mobile-menu-item registered-link"><i class="fas fa-list-alt"></i> Registered Courses</a>
+            <a href="view-schedule-student.html" class="mobile-menu-item schedule-link"><i class="fas fa-calendar-alt"></i> View Schedule</a>
             <a href="index.html" class="mobile-menu-item logout-link"><i class="fas fa-sign-out-alt"></i> Logout</a>
         </div>
     </nav>
@@ -104,5 +105,5 @@
             </div>
         </section>
     </main>
-</body>
+<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'93ebc546de50677d',t:'MTc0NzA3MjM1NC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
