--- a/view-schedule-student.html
+++ b/view-schedule-student.html
@@ -12,7 +12,7 @@
     <link rel="shortcut icon" href="pics/cu-logo.png" type="image/x-icon">
 </head>
 <body>
-    <!-- Navigation -->
+    <!-- Navigation Bar -->
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-brand">
@@ -24,45 +24,71 @@
                     <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px"><path d="M480-120q-150 0-255-105T120-480q0-150 105-255t255-105q14 0 27.5 1t26.5 3q-41 29-65.5 75.5T444-660q0 90 63 153t153 63q55 0 101-24.5t75-65.5q2 13 3 26.5t1 27.5q0 150-105 255T480-120Z"/></svg>
                     <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px"><path d="M480-280q-83 0-141.5-58.5T280-480q0-83 58.5-141.5T480-680q83 0 141.5 58.5T680-480q0 83-58.5 141.5T480-280ZM200-440H40v-80h160v80Zm720 0H760v-80h160v80ZM440-760v-160h80v160h-80Zm0 720v-160h80v160h-80ZM256-650l-101-97 57-59 96 100-52 56Zm492 496-97-101 53-55 101 97-57 59Zm-98-550 97-101 59 57-100 96-56-52ZM154-212l101-97 55 53-97 101-59-57Z"/></svg>
                 </button>
+                <button class="notification-btn">
+                    <i class="fas fa-bell"></i>
+                    <span class="notification-badge"></span>
+                </button>
                 <div class="user-profile">
                     <img id="userAvatar" src="https://ui-avatars.com/api/?name=?" alt="Profile" class="user-avatar"/>
                     <span id="userName">Loading...</span>
                 </div>
-                <a href="student-dashboard.html" class="back-btn">
-                    <i class="fas fa-arrow-left"></i> Back to Dashboard
-                </a>
-                <a href="index.html" class="logout-btn">
-                    <i class="fas fa-sign-out-alt"></i> Logout
-                </a>
+                <button class="hamburger-btn">
+                    <i class="fas fa-bars"></i>
+                </button>
             </div>
         </div>
+        <div class="mobile-menu">
+            <a href="student-dashboard.html" class="mobile-menu-item"><i class="fas fa-home"></i> Dashboard</a>
+            <a href="enroll-courses.html" class="mobile-menu-item enroll-link"><i class="fas fa-plus-circle"></i> Enroll Courses</a>
+            <a href="registered-courses.html" class="mobile-menu-item registered-link"><i class="fas fa-list-alt"></i> Registered Courses</a>
+            <a href="index.html" class="mobile-menu-item logout-link"><i class="fas fa-sign-out-alt"></i> Logout</a>
+        </div>
     </nav>
+
+    <!-- Profile Popup -->
+    <div id="profilePopup" class="profile-popup">
+        <div class="profile-popup-content">
+            <div class="profile-header">
+                <img id="popupUserAvatar" src="" alt="Profile" class="user-avatar"/>
+                <h3 id="popupUserName"></h3>
+            </div>
+            <div class="profile-details">
+                <div class="profile-detail">
+                    <span class="detail-label">Email:</span>
+                    <span id="popupUserEmail" class="detail-value"></span>
+                </div>
+                <div class="profile-detail">
+                    <span class="detail-label">Index Number:</span>
+                    <span id="popupUserIndex" class="detail-value"></span>
+                </div>
+                <div class="profile-detail">
+                    <span class="detail-label">Program:</span>
+                    <span id="popupUserProgram" class="detail-value"></span>
+                </div>
+                <div class="profile-detail">
+                    <span class="detail-label">Level:</span>
+                    <span id="popupUserLevel" class="detail-value"></span>
+                </div>
+            </div>
+            <button class="close-popup-btn">×</button>
+        </div>
+    </div>
 
     <!-- Main Content -->
     <main class="main-content">
         <!-- Timetable -->
-        <section class="timetable-section">
-            <div class="section-header">
-                <h1>Timetable</h1>
-            </div>
-            <div class="table-container">
-                <table class="timetable-table" id="timetableTable">
-                    <thead>
-                        <tr>
-                            <th>Time</th>
-                            <th>Monday</th>
-                            <th>Tuesday</th>
-                            <th>Wednesday</th>
-                            <th>Thursday</th>
-                            <th>Friday</th>
-                            <th>Saturday</th>
-                            <th>Sunday</th>
-                        </tr>
-                    </thead>
-                    <tbody id="timetableBody"></tbody>
-                </table>
+        <section class="welcome-section">
+            <h1>Timetable</h1>
+            <p class="welcome-subtext">View your class schedule for this semester.</p>
+        </section>
+
+        <section class="courses-section">
+            <h2>Your Schedule</h2>
+            <div class="courses-list" id="timetableList">
+                <!-- Timetable entries will be dynamically added here -->
             </div>
         </section>
     </main>
+<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'93ebab8839d4c01d',t:'MTc0NzA3MTI5OS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script>
 </body>
 </html>
