--- a/index.html
+++ b/index.html
@@ -1,53 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Meta tags for character encoding and responsive viewport -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Online Attendance Portal</title>
+  <!-- External stylesheet for Boxicons -->
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+  <!-- Custom stylesheet for login page styling -->
   <link rel="stylesheet" href="style.css">
+  <!-- Favicon for the portal -->
   <link rel="shortcut icon" href="pics/cu-logo.png" type="image/x-icon">
+  <!-- JavaScript for login functionality, deferred to load after HTML -->
   <script src="login.js" defer></script>
+  <!-- JavaScript for dark mode toggle, deferred to load after HTML -->
   <script src="darkmode.js" defer></script>
 </head>
 <body>
-<!--Darkmode feature-->
+<!-- Darkmode feature -->
 <div class="container">
   <button id="theme-switch" class="theme-btn">
+    <!-- SVG for dark mode icon -->
     <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px"><path d="M480-120q-150 0-255-105T120-480q0-150 105-255t255-105q14 0 27.5 1t26.5 3q-41 29-65.5 75.5T444-660q0 90 63 153t153 63q55 0 101-24.5t75-65.5q2 13 3 26.5t1 27.5q0 150-105 255T480-120Z"/></svg>
+    <!-- SVG for light mode icon -->
     <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px"><path d="M480-280q-83 0-141.5-58.5T280-480q0-83 58.5-141.5T480-680q83 0 141.5 58.5T680-480q0 83-58.5 141.5T480-280ZM200-440H40v-80h160v80Zm720 0H760v-80h160v80ZM440-760v-160h80v160h-80Zm0 720v-160h80v160h-80ZM256-650l-101-97 57-59 96 100-52 56Zm492 496-97-101 53-55 101 97-57 59Zm-98-550 97-101 59 57-100 96-56-52ZM154-212l101-97 55 53-97 101-59-57Z"/></svg>
   </button>
-<!--Login box-->  
+<!-- Login box -->
   <div class="login-box">
     <div class="left-section">
       <h1>LOGIN</h1>
       <p>Fill in with appropriate details to proceed</p>
 
       <form id="loginForm">
+        <!-- Email input field with envelope icon -->
         <div class="form-group" id="email-group">
           <i class='bx bx-envelope'></i>
           <input type="email" name="email" placeholder="Email" required>
-          <i class='bx bx-check checkmark'></i>
         </div>
 
+        <!-- Password input field with lock and toggle icons -->
         <div class="form-group" id="password-group">
           <i class='bx bx-lock'></i>
           <input id="password" name="password" type="password" placeholder="Password" required>
           <i class='bx bx-show password-toggle'></i>
-          <i class='bx bx-check checkmark'></i>
         </div>
 
+        <!-- Password validation rules -->
         <div class="password-rules" id="rules">
           <span id="rule1">• At least 8 characters</span>
           <span id="rule2">• At least one number (0–9) or a symbol</span>
           <span id="rule3">• Lowercase (a–z) and uppercase (A–Z)</span>
         </div>
 
+        <!-- Submit button for login -->
         <button type="submit" class="btn">Login</button>
       </form>
 
+      <!-- Error message display -->
       <div id="loginError"></div>
 
+      <!-- Links for password recovery and registration -->
       <div class="extra-options">
         <a href="forgot-password.html">Forgot Password?</a>
         <span> | </span>
