--- a/student-dashboard.html
+++ b/student-dashboard.html
@@ -73,7 +73,20 @@
                     <span id="popupUserLevel" class="detail-value"></span>
                 </div>
             </div>
-            <button class="close-popup-btn">&times;</button>
+            <button class="close-popup-btn">×</button>
+        </div>
+    </div>
+
+    <!-- Notification Popup -->
+    <div id="notificationPopup" class="notification-popup">
+        <div class="notification-popup-content">
+            <button class="close-notification-btn">×</button>
+            <div class="notification-header">
+                <h3>Notifications</h3>
+            </div>
+            <div class="notification-list" id="notificationList">
+                <p>Loading notifications...</p>
+            </div>
         </div>
     </div>
 
